--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "gatsby": "^5.3.3",
+    "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-source-contentful": "^8.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
