--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-source-contentful": "^8.3.1",
+    "netlify-lambda": "^2.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
